working router